src/test/deca/context/valid/minus_intvar_intvar_minus_int_context.deca
// Description : 
// 
//      Test contextuellement correct de la soustraction d'une variable int et d'un int
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int x=3;
    int y= x-3;
}