src/test/deca/context/invalid/blt_int_blt_boolean.deca
// Description :
// 
//      Test syntaxiquement correct de 3<true
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 3<true;
}

